--- a/src/data/authors.yaml
+++ b/src/data/authors.yaml
@@ -1,3 +1,3 @@
-- id: Donald Duck
-  bio: "He is a duck"
+- id: Donald Duck Dunn
+  bio: "He is not a duck"
   avatar: '../assets/images/duck_avatar.jpeg'
