--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "gulp build & gulp watch & ELEVENTY_ENV=dev eleventy --serve",
     "prime": "gulp build & ELEVENTY_ENV=prime eleventy",
-    "build": "gulp build & ELEVENTY_ENV=prod eleventy",
+    "build": "gulp build && npx eleventy",
     "dryrun": "gulp build & ELEVENTY_ENV=dev eleventy",
     "new:link": "node utils/new.js link"
   },
@@ -16,7 +16,7 @@
   "author": "Joe Sepi",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "0.10.0",
+    "@11ty/eleventy": "0.11.0",
     "@11ty/eleventy-plugin-rss": "^1.0.3",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.0",
     "axios": "^0.18.1",
